Some fixes for a Sphere of Self Sacrifice